@@ -38,6 +38,7 @@
 * BluePay: Add Canada to supported countries list [shasum]
 * Linkpoint: Clean whitespace from PEM [curiousepic]
 * Credorax: Add gateway support [davidsantoso]
+* Barclay SmartPay: Add support for credit [shasum]
 
 == Version 1.60.0 (July 4, 2016)
 * Orbital: Fix CC num leak on profile calls [drewblas]
